--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     
     <body>
