Add flipbook skeleton.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     </head>
     
     <body>
+        <div id="flipbook">
+            <div class="flap" id="top"></div>
+            <div class="flap" id="middle"></div>
+            <div class="flap" id="bottom"></div>
+        </div>
     </body>
 </html>
