Basic flipbook interaction using demo images and JSON data.

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             <div class="flap" id="middle"></div>
             <div class="flap" id="bottom"></div>
         </div>
+        <script src="/javascripts/lib/zepto.min.js"></script>
+        <script src="/javascripts/lib/swipeview.min.js"></script>
+        <script src="/javascripts/flipbook.js"></script>
     </body>
 </html>
