--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>TriStyle</title>
-        <link href="/stylesheets/screen.css" rel="stylesheet" media="screen,projection" type="text/css" />
-        <link rel="shortcut icon" href="/images/favicon.ico" />
-        <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png" />
+        <link href="stylesheets/screen.css" rel="stylesheet" media="screen,projection" type="text/css" />
+        <link rel="shortcut icon" href="images/favicon.ico" />
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -19,8 +19,8 @@
             <div class="flap" id="middle"></div>
             <div class="flap" id="bottom"></div>
         </div>
-        <script src="/javascripts/lib/zepto.min.js"></script>
-        <script src="/javascripts/lib/swipeview.min.js"></script>
-        <script src="/javascripts/flipbook.js"></script>
+        <script src="javascripts/lib/zepto.min.js"></script>
+        <script src="javascripts/lib/swipeview.min.js"></script>
+        <script src="javascripts/flipbook.js"></script>
     </body>
 </html>
