Update price when flipping.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     
     <body>
         <div id="flipbook">
-            <div class="flap" id="top"></div>
-            <div class="flap" id="middle"></div>
-            <div class="flap" id="bottom"></div>
+            <div class="flap" id="top">
+                <div class="price"><span class="value">0.00</span> €</div>
+            </div>
+            <div class="flap" id="middle">
+                <div class="price"><span class="value">0.00</span> €</div>
+            </div>
+            <div class="flap" id="bottom">
+                <div class="price"><span class="value">0.00</span> €</div>
+            </div>
         </div>
         <script src="javascripts/lib/zepto.min.js"></script>
         <script src="javascripts/lib/swipeview.min.js"></script>
