Add reload button.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="price"><span class="value">0.00</span> €</div>
             </div>
         </div>
+        <a href="#" onclick="location.reload(); return false;" id="reloader">reload</a>
         <script src="javascripts/lib/zepto.min.js"></script>
         <script src="javascripts/lib/swipeview.min.js"></script>
         <script src="javascripts/flipbook.js"></script>
