--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>TriStyle</title>
         <link href="stylesheets/screen.css" rel="stylesheet" media="screen,projection" type="text/css" />
         <link rel="shortcut icon" href="images/favicon.ico" />
-        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114-precomposed.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72-precomposed.png" />
+        <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-precomposed.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
