--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-precomposed.png" />
+        <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and not (-webkit-min-device-pixel-ratio: 2)" href="images/apple-touch-startup-image-320x460.png" />
+        <link rel="apple-touch-startup-image" media="(max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" href="images/apple-touch-startup-image-640x920.png" />
+        <link rel="apple-touch-startup-image" media="(min-device-width: 768px) and (orientation: portrait)" href="images/apple-touch-startup-image-768x1004.png" />
+        <link rel="apple-touch-startup-image" media="(min-device-width: 768px) and (orientation: landscape)" href="images/apple-touch-startup-image-1024x748.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
