Add add2home script.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="#" onclick="location.reload(); return false;" id="reloader">reload</a>
         <script src="javascripts/lib/zepto.min.js"></script>
         <script src="javascripts/lib/swipeview.min.js"></script>
+        <script src="javascripts/lib/add2home.min.js"></script>
         <script src="javascripts/flipbook.js"></script>
     </body>
 </html>
