Add total price.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" manifest="cache.manifest">
+<html lang="en" _manifest="cache.manifest">
     <head>
         <meta charset="utf-8">
         <title>TriStyle</title>
@@ -28,6 +28,7 @@
             <div class="flap" id="bottom">
                 <div class="price"><span class="value">0.00</span> €</div>
             </div>
+            <div id="total" class="price"><span class="value">0.00</span> €</div>
         </div>
         <a href="#" onclick="location.reload(); return false;" id="reloader">reload</a>
         <script src="javascripts/lib/zepto.min.js"></script>
