--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" _manifest="cache.manifest">
+<html lang="en" manifest="cache.manifest">
     <head>
         <meta charset="utf-8">
         <title>TriStyle</title>
