Include Piwik tracking code.

--- a/index.html
+++ b/index.html
@@ -35,5 +35,18 @@
         <script src="javascripts/lib/swipeview.min.js"></script>
         <script src="javascripts/lib/add2home.min.js"></script>
         <script src="javascripts/flipbook.js"></script>
+        
+        <script type="text/javascript">
+            var pkBaseURL = "//analytics.pb.io/";
+            document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type="text/javascript">
+            try {
+                var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 7);
+                piwikTracker.trackPageView();
+                piwikTracker.enableLinkTracking();
+            } catch(err) {}
+        </script>
+        <noscript><p><img src="http://analytics.pb.io/piwik.php?idsite=7" style="border:0" alt="" /></p></noscript>
     </body>
 </html>
